--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ping-Pong</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
-  <link href="https://fonts.cdnfonts.com/css/games" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ping-Pong</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+    <link href="https://fonts.cdnfonts.com/css/games" rel="stylesheet" />
+  </head>
+  <body>
     <header>
-      <h1 class="game-title"><span class="title_span_1">Ping </span><span class="title_span_2">Pong</span></h1>
-      <h2 class="winner-text"></h2>
+      <h1 class="game-title">
+        <span class="title_span_1">Ping </span
+        ><span class="title_span_2">Pong</span>
+      </h1>
+      <h3 class="winner-text"></h3>
     </header>
-    <div class="game-area">
-      <h1 class="player_1_score">0</h1>
-      <h1 class="player_2_score">0</h1>
-      <div class="paddle player-paddle"></div>
-      <div class="ball"></div>
-      <div class="paddle computer-paddle"></div>
-      <div class="net"></div>
-    </div>
+    <main>
+      <h1 class="player_1_title">Player 1</h1>
+      <div class="game-area">
+        <h1 class="player_1_score">0</h1>
+        <h1 class="player_2_score">0</h1>
+        <div class="paddle player-paddle"></div>
+        <div class="ball"></div>
+        <div class="paddle computer-paddle"></div>
+        <div class="net"></div>
+      </div>
+      <h1 class="player_2_title">Player 2</h1>
+    </main>
     <div class="result-area">
       <button class="start-btn">Start Game</button>
       <button class="restart-btn">Restart Game</button>
     </div>
-</body>
+    <footer>
+      <p>All Rights Reserved &reg - Diego Sousa 2023&copy;</p>
+    </footer>
+  </body>
 </html>
