--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <button class="restart-btn">Restart Game</button>
     </div>
     <footer>
-      <p>All Rights Reserved &reg - Diego Sousa 2023&copy;</p>
+      <p>&copy;2023 Diego Sousa - All Rights Reserved&reg</p>
     </footer>
   </body>
 </html>
